:art: Update style and layout

--- a/index.html
+++ b/index.html
@@ -123,7 +123,13 @@
 							</li>
 						</ul>
 					</div>
+					<ul class="cartProductSum">
+						<li><h3>Product</h3></li>
+	
+						<li><h3>Amount</h3></li>
+					</ul>
 					<button class="checkoutBtn">Proceed to checkout</button>
+					
 				</div>
 				<input type="text" class="navSearchBar" />
 				<button class="navSearchBtn">
@@ -372,7 +378,7 @@
 					class="rightDivider"
 				></span>
 			</h2>
-			<button class="continueShopping"><img src="/Assets/icons/leftArrow.svg" alt="arrow pointing left" width="50" height="50">Continue shopping</button>
+			<button class="continueShopping"><img src="Assets/icons/leftArrow.svg" alt="arrow pointing left" width="50" height="50">Continue shopping</button>
 			<div class="checkoutSec">
 				<h3>Order Summary</h3>
 				<div>
@@ -394,10 +400,17 @@
 								>
 									+
 								</button>
+								
 							</div>
 						</li>
 					</ul>
+
 				</div>
+				<ul class="checkoutProductSum">
+					<li><h4 class="productSummaryAmount">Total products: </h3></li>
+
+					<li><h4 class="productSummarySum">Total amount: </h3></li>
+				</ul>
 				<form action="" class="fieldSetContainer">
 					<fieldset class="orderForm">
 						<legend>
