--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
 					</div>
 					<ul class="cartProductSum">
 						<li><h3>Product</h3></li>
-	
+
 						<li><h3>Amount</h3></li>
 					</ul>
 					<button class="checkoutBtn">Proceed to checkout</button>
-					
 				</div>
 				<input type="text" class="navSearchBar" />
 				<button class="navSearchBtn">
@@ -191,10 +190,14 @@
 				</button>
 				<div class="sortMenu toggleHide">
 					<!-- <div class="sortMenu"> -->
-					<p>Sort on:</p>
-					<label for="range">Price</label>
-					<input type="range" />
-
+					<h4>Sort products:</h4>
+					<div class="priceSorting">
+						<label for="pricerange">Price range: </label>
+						<span class="rangeMinVal">0$</span><input type="range" id="pricerange" class="priceRangeInput" /><span class="rangeMaxVal">49.99$</span>
+						<span class="rangeVal">0$</span>
+						<button>Price falling</button>
+						<button>Price rising</button>
+					</div>
 					<select name="sorting" id="sorting">
 						<option value="fprice">Price falling</option>
 						<option value="rprice">Price rising</option>
@@ -372,13 +375,19 @@
 		</div>
 		<!-- <div class="checkoutWrapper"> -->
 		<section class="checkoutWrapper toggleHide">
-			
 			<h2 class="sectionHeading">
 				<span class="leftDivider"></span>Checkout<span
 					class="rightDivider"
 				></span>
 			</h2>
-			<button class="continueShopping"><img src="Assets/icons/leftArrow.svg" alt="arrow pointing left" width="50" height="50">Continue shopping</button>
+			<button class="continueShopping">
+				<img
+					src="Assets/icons/leftArrow.svg"
+					alt="arrow pointing left"
+					width="50"
+					height="50"
+				/>Continue shopping
+			</button>
 			<div class="checkoutSec">
 				<h3>Order Summary</h3>
 				<div>
@@ -400,16 +409,14 @@
 								>
 									+
 								</button>
-								
 							</div>
 						</li>
 					</ul>
-
 				</div>
 				<ul class="checkoutProductSum">
-					<li><h4 class="productSummaryAmount">Total products: </h3></li>
+					<li><h4 class="productSummaryAmount">Total products:</h4></li>
 
-					<li><h4 class="productSummarySum">Total amount: </h3></li>
+					<li><h4 class="productSummarySum">Total amount:</h4></li>
 				</ul>
 				<form action="" class="fieldSetContainer">
 					<fieldset class="orderForm">
