✨ Initialized sorting function

--- a/index.html
+++ b/index.html
@@ -58,68 +58,7 @@
 					<div class="productPreviewSummary">
 						<ul>
 							<li>
-								<img
-									class="productPreviewImage"
-									src="Assets/Images/Products/Akryl.jpg"
-									width="50"
-									height="50"
-								/>
-								<h3 class="previewProductTitle">Test1</h3>
-							</li>
-
-							<li><p class="previewProductPrice">2590 SEK</p></li>
-
-							<li class="productAmountActions">
-								<button class="productAmountSub">-</button
-								><input class="productAmount" type="number" /><button
-									class="productAmountAdd"
-								>
-									+
-								</button>
-								<button class="previewProductRemoval">
-									<img
-										src="Assets/icons/trashcan.svg"
-										alt=""
-										width="15px"
-										height="15px"
-									/>
-								</button>
-							</li>
-							<!-- </ul>
-
-
-					<ul class="productPreviewSummary"> -->
-							<li>
-								<img
-									class="productPreviewImage"
-									src="Assets/Images/Products/Akryl.jpg"
-									width="50"
-									height="50"
-								/>
-								<!-- </li>
-						<li> -->
-								<h3 class="previewProductTitle">Test1</h3>
-								<!-- </li>
-						<li> -->
-							</li>
-
-							<li><p class="previewProductPrice">2590 SEK</p></li>
-							<!-- </li> -->
-							<li class="productAmountActions">
-								<button class="productAmountSub">-</button
-								><input class="productAmount" type="number" /><button
-									class="productAmountAdd"
-								>
-									+
-								</button>
-								<button class="previewProductRemoval">
-									<img
-										src="Assets/icons/trashcan.svg"
-										alt=""
-										width="15px"
-										height="15px"
-									/>
-								</button>
+								<p>No products in cart :/</p>
 							</li>
 						</ul>
 					</div>
@@ -193,11 +132,16 @@
 					<h4>Sort products:</h4>
 					<div class="priceSorting">
 						<label for="pricerange">Price range: </label>
-						<span class="rangeMinVal">0$</span><input type="range" id="pricerange" class="priceRangeInput" /><span class="rangeMaxVal">49.99$</span>
+						<span class="rangeMinVal">0$</span
+						><input type="range" id="pricerange" class="priceRangeInput" step="5" min="14.99" max="49.99" value="49.99"/><span
+							class="rangeMaxVal"
+							>49.99$</span
+						>
 						<span class="rangeVal">0$</span>
-						<button>Price falling</button>
-						<button>Price rising</button>
+
 					</div>
+					<button>Price falling</button>
+					<button class="sortAlpha">A-Z</button>
 					<select name="sorting" id="sorting">
 						<option value="fprice">Price falling</option>
 						<option value="rprice">Price rising</option>
@@ -275,8 +219,8 @@
 						/>
 						<!-- </li>
 					<li> -->
-						<h3>First, Choose the products that represent your eternal love</h3>
-						<p>We have roses of all sorts,</p>
+						<h3>Select Symbols of Eternal Love:</h3>
+						<p>Explore our diverse collection of timeless roses each a unique expression of enduring love.</p>
 					</li>
 					<li>
 						<img
@@ -287,8 +231,8 @@
 						/>
 						<!-- </li>
 					<li> -->
-						<h3>Second, Choose your prefered method of payment</h3>
-						<p>We accept accept card and offer smooth invoicing</p>
+						<h3>Convenient Payment Options:</h3>
+						<p>Enjoy a seamless checkout experience with our flexible payment methods, including card payments and hassle-free invoicing.</p>
 					</li>
 					<li>
 						<img
@@ -299,11 +243,8 @@
 						/>
 						<!-- </li>
 					<li> -->
-						<h3>
-							Third thing is easy, just relax and enjoy life while we deliver
-							your product
-						</h3>
-						<p>Our delivery methods are most sustainable</p>
+						<h3>Sit Back and Unwind:</h3>
+						<p>While we handle the delivery, take a moment to relax and savor life. Our sustainable delivery methods ensure a conscientious service.</p>
 					</li>
 					<li>
 						<img
@@ -314,11 +255,8 @@
 						/>
 						<!-- </li>
 					<li> -->
-						<h3>Fourth, and most important part</h3>
-						<p>
-							Surprise your loved ones with a symbol of love, a symbol like no
-							other, Elegantroses a symbol of etirity
-						</p>
+						<h3>Cherish the Extraordinary:</h3>
+						<p>Gift your loved ones with a symbol of love like no other. ElegantRoses <3 A timeless emblem of eternity.</p>
 					</li>
 				</ul>
 			</section>
@@ -584,7 +522,7 @@
 					<h3>About ElegantRoses</h3>
 				</li>
 				<li><a href="#">Environmental policy</a></li>
-				<li><a href="#">Our roses</a></li>
+				<li><a href="#">Our eternal roses</a></li>
 				<li><a href="#">Job openings</a></li>
 				<li><a href="#">Follow our journey</a></li>
 			</ul>
@@ -597,7 +535,7 @@
 				<li><a href="#">Contact us</a></li>
 			</ul>
 			<div>
-				<p>Elegant Roses 2023</p>
+				<p>Elegant Roses® 2023</p>
 				<img src="Assets/icons/FooterLogo.svg" alt="" width="100" height="64" />
 				<p>All Rights Reserved</p>
 			</div>
