🎨 Improved code structure & comments

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 				<ul class="checkoutProductSum">
 					<li><h4 class="productSummaryAmount">Total products: <span id="totalAmountCheckout"></span></h4></li>
 
-					<li><h4 class="productSummarySum">Total amount: <span id="totalPriceCheckout"></span></h4></li>
+					<li id="totalPriceCheckout"></li>
 				</ul>
 				<form action="" class="fieldSetContainer">
 					<fieldset class="orderForm">
