🔧 Adjusted validation function

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 						/>
 
 						<label for="city">City</label>
-						<input type="text" id="postort" name="city" class="checkoutInput" />
+						<input type="text" id="city" name="city" class="checkoutInput" />
 
 						<label for="doorcode">Door code(Optional):</label>
 						<input
@@ -435,8 +435,8 @@
 						<legend><h4>Choose payment method</h4></legend>
 						<!-- <label> <input type="radio" name="payment" id="cardPaymentOption" />Card </label>
 						<label> <input type="radio" name="payment" id="invoicePaymentOption" checked/>Invoice </label> -->
-						<button id="cardPaymentOption">Card </button>
-						<button id="invoicePaymentOption">Invoice </button>
+						<button id="cardPaymentOption" type="button">Card </button>
+						<button id="invoicePaymentOption" type="button">Invoice </button>
 						<div class="cardPayment" id="cardPaymentForm">
 							<label for="cardno">Card number:</label>
 							<input type="number" id="cardno" class="checkoutInput" value="4111111111111111"/>
