--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<!-- </div> -->
 		<!-- <p class='checkOutProd'>TROLLY</p>
 			<p class='checkOutAmount'>PRICE</p> -->
-		<nav>
+		<nav class="navBar">
 			<button class="navCartBtn">
 				<img src="Assets/icons/shoppingCart.svg" alt="" width="30px" height="30px" /><span
 					class="productInCart"></span>
@@ -325,33 +325,32 @@
 					<label for="fname">First name</label>
 					<div class="formInput">
 						<input type="text" id="fname" required="required" class="checkoutInput" />
-						<p id="fNameErrorMsg" class="toggleHide">Please provide a valid e-mail address</p>
+						<p id="fNameErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 
 					<label for="lname">Last name</label>
 					<div class="formInput">
 						<input type="text" id="lname" class="checkoutInput" />
-						<p id="lNameErrorMsg" class="toggleHide">Please provide a valid e-mail address</p>
+						<p id="lNameErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 
 					<label for="street-address">Street address</label>
 					<div class="formInput">
 						<input type="text" id="street-address" name="street-address" required="required"
 							class="checkoutInput" />
-						<p id="streetError" class="toggleHide">Please provide a valid e-mail address</p>
+						<p id="streetError" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 
 					<label for="zip">Zip code </label>
 					<div class="formInput">
-						<input name="zip" id="zip" pattern="[0-9]*" inputmode="numeric" required="required"
-							type="number" class="checkoutInput" />
-						<p id="zipErrorMsg" class="toggleHide">Please provide a valid e-mail address</p>
+						<input name="zip" id="zip" required="required" type="number" class="checkoutInput" />
+						<p id="zipErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 
 					<label for="city">City</label>
 					<div class="formInput">
 						<input type="text" id="city" name="city" class="checkoutInput" />
-						<p id="cityErrorMsg" class="toggleHide">Please provide a valid e-mail address</p>
+						<p id="cityErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 
 					<label for="doorcode">Door code(Optional):</label>
@@ -361,13 +360,13 @@
 					<label for="tel">Phone (mobile):</label>
 					<div class="formInput">
 						<input type="tel" id="tel" name="tel" required="required" class="checkoutInput" />
-						<p id="telErrorMsg" class="toggleHide">Please provide a valid e-mail address</p>
+						<p id="telErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 
 					<label for="email">Email Address:</label>
 					<div class="formInput">
 						<input type="email" id="email" name="email" required="required" class="checkoutInput" />
-						<p id="emailErrorMsg" class="toggleHide">Please provide a valid e-mail address</p>
+						<p id="emailErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
 					</div>
 				</fieldset>
 
@@ -391,16 +390,32 @@
 					<button id="invoicePaymentOption" type="button">Invoice </button>
 					<div class="cardPayment" id="cardPaymentForm">
 						<label for="cardno">Card number:</label>
-						<input type="number" id="cardno" class="checkoutInput" value="4111111111111111" />
+						<div class="formInput">
+							<input type="number" id="cardno" class="checkoutInput" value="4111111111111111" />
+							<p id="cardNoErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+						</div>
+
 						<label for="expirydate">Expiry date</label>
-						<input type="text" id="expirydate" class="checkoutInput" value="05/25" />
+						<div class="formInput">
+							<input type="text" id="expirydate" class="checkoutInput" value="05/25" />
+							<p id="expiryErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+						</div>
+
 						<label for="cvv">CVV Code</label>
-						<input type="number" id="cvv" class="checkoutInput" />
+						<div class="formInput">
+							<input type="number" id="cvv" class="checkoutInput" />
+							<p id="cvvErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+						</div>
 					</div>
-					<div class="invoicePayment toggleHide" id="invoicePaymentForm">
-						<label for="ssn">SSN:</label>
-						<input type="text" id="ssn" class="checkoutInput" />
-					</div>
+
+						<div class="invoicePayment toggleHide" id="invoicePaymentForm">
+							<label for="ssn">SSN:</label>
+							<div class="formInput">
+								<input type="text" id="ssn" class="checkoutInput" />
+								<p id="ssnErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+							</div>
+						</div>
+					
 				</fieldset>
 
 				<fieldset class="orderSubmit">
@@ -417,7 +432,7 @@
 						<label for="privacynotice">I confirm that I have read and accepted
 							<a href="#">Elgantroses T&Cs</a></label>
 					</div>
-					<button type="submit" id="submitorder" disabled>Submit order</button>
+					<button type="button" id="submitorder">Submit order</button>
 					<button id="resetBTN" type="reset">Reset</button>
 				</fieldset>
 			</form>
@@ -451,6 +466,7 @@
 					<p class="orderTotalPcs">Total PCS: <span id="totalAmountSummary"></span></p>
 				</li>
 			</ul>
+			<button class="resetAllBtn">Back to home</button>
 		</div>
 	</section>
 	<div class="timeOutMsgBg toggleHide">
