--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 		<!-- <p class='checkOutProd'>TROLLY</p>
 			<p class='checkOutAmount'>PRICE</p> -->
 		<nav class="navBar">
+			<button class="continueShopping toggleHide">
+				<img src="Assets/icons/leftArrow.svg" alt="arrow pointing left" width="50" height="50" />Continue shopping
+			</button>
 			<button class="navCartBtn">
 				<img src="Assets/icons/shoppingCart.svg" alt="" width="30px" height="30px" /><span
 					class="productInCart"></span>
@@ -87,9 +90,12 @@
 				<button class="checkoutBtn">Proceed to checkout</button>
 			</div>
 			<input type="text" class="navSearchBar" />
-			<button class="navSearchBtn">
-				<img src="Assets/icons/Search.svg" alt="" width="30px" height="30px" />
+			<button class="sortBtn">
+				<img src="Assets/icons/Filter.svg" alt="" height="30" width="50" />
 			</button>
+			<!-- <button class="navSearchBtn">
+				<img src="Assets/icons/Search.svg" alt="" width="30px" height="30px" />
+			</button> -->
 			<button class="OpenNavBtn">
 				<img src="Assets/icons/burgerMenu.svg" alt="" width="30px" height="30px" />
 			</button>
@@ -129,20 +135,20 @@
 				<span class="leftDivider"></span>Products<span class="rightDivider"></span>
 			</h2>
 
-			<button class="sortBtn">
+			<!-- <button class="sortBtn">
 				<img src="Assets/icons/Filter.svg" alt="" height="30" width="50" />
-			</button>
+			</button> -->
 			<div class="sortMenu toggleHide">
 				<!-- <div class="sortMenu"> -->
 				<h4>Sort products:</h4>
 				<div class="priceSorting">
 					<label for="pricerange">Price range: </label>
 					<span class="rangeMinVal">0$</span><input type="range" id="pricerange" class="priceRangeInput"
-						step="5" min="14.99" max="60.99" value="60.99" /><span class="rangeMaxVal">49.99$</span>
+						step="5" min="14.99" max="60.99" value="0" /><span class="rangeMaxVal">59.99$</span>
 					<span class="rangeVal">0$</span>
 
 				</div>
-				<button>Price falling</button>
+				
 				<button class="sortAlpha">A-Z</button>
 				<select name="sorting" id="sorting">
 					<option value="fprice">Price falling</option>
@@ -169,10 +175,10 @@
 				<input type="radio" name="category" />
 
 				<p>Select box Shape category</p>
-				<label for="square">Square</label>
-				<input type="radio" name="category" />
-				<label for="round">Round</label>
-				<input type="radio" name="category" />
+				<button class="round"><img class="circle" src="Assets/icons/circleShape.svg" width="40" height="40"></button>
+				<button class="heart"><img src="Assets/icons/heartShape.svg" width="40" height="40"></button>
+				<button class="square"><img src="Assets/icons/squareShape.svg" width="40" height="40"></button> 
+				<button class="bear"><img src="Assets/icons/teddyShape.svg" width="40" height="40"></button>
 			</div>
 
 			<div class="productContainer">
@@ -281,9 +287,7 @@
 		<h2 class="sectionHeading">
 			<span class="leftDivider"></span>Checkout<span class="rightDivider"></span>
 		</h2>
-		<button class="continueShopping">
-			<img src="Assets/icons/leftArrow.svg" alt="arrow pointing left" width="50" height="50" />Continue shopping
-		</button>
+
 		<div class="checkoutSec">
 			<h3>Order Summary</h3>
 			<div>
@@ -322,48 +326,48 @@
 					<legend>
 						<h4>Contact details</h4>
 					</legend>
-					<label for="fname">First name</label>
+					<label for="fname">First name*</label>
 					<div class="formInput">
 						<input type="text" id="fname" required="required" class="checkoutInput" placeholder="John"/>
 						<p id="fNameErrorMsg" class="errorMsg toggleHide">Please provide your first name</p>
 					</div>
 
-					<label for="lname">Last name</label>
+					<label for="lname">Last name*</label>
 					<div class="formInput">
 						<input type="text" id="lname" required="required" class="checkoutInput" placeholder="Doe"/>
 						<p id="lNameErrorMsg" class="errorMsg toggleHide">Please provide your last name</p>
 					</div>
 
-					<label for="street-address">Street address</label>
+					<label for="street-address">Street address*</label>
 					<div class="formInput">
 						<input type="text" id="street-address" name="street-address" required="required"
 							class="checkoutInput" placeholder="Streetname 123"/>
 						<p id="streetError" class="errorMsg toggleHide">Please provide a valid street address</p>
 					</div>
 
-					<label for="zip">Zip code </label>
+					<label for="zip">Zip code*</label>
 					<div class="formInput">
 						<input name="zip" id="zip" required="required" type="number" class="checkoutInput" placeholder="123 56"/>
 						<p id="zipErrorMsg" class="errorMsg toggleHide">Please provide a valid zip code</p>
 					</div>
 
-					<label for="city">City</label>
+					<label for="city">City*</label>
 					<div class="formInput">
 						<input type="text" id="city" name="city" class="checkoutInput" placeholder="Doe" required="required"/>
-						<p id="cityErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+						<p id="cityErrorMsg" class="errorMsg toggleHide">Please provide a valid city</p>
 					</div>
 
-					<label for="doorcode">Door code(Optional):</label>
-					<input type="number" id="doorcode" name="doorcode" class="checkoutInput" placeholder="Code for door or Phone #"/>
+					<label for="doorcode">Door code(Optional)</label>
+					<input type="text" id="doorcode" name="doorcode" class="checkoutInput" placeholder="Code for door or Phone #"/>
 
 
-					<label for="tel">Phone (mobile):</label>
+					<label for="tel">Phone (mobile)*</label>
 					<div class="formInput">
 						<input type="tel" id="tel" name="tel" required="required" class="checkoutInput" placeholder="+46 73 2222 333"/>
-						<p id="telErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+						<p id="telErrorMsg" class="errorMsg toggleHide">Please provide a valid phone number</p>
 					</div>
 
-					<label for="email">Email Address:</label>
+					<label for="email">Email Address*</label>
 					<div class="formInput">
 						<input type="email" id="email" name="email" required="required" class="checkoutInput" placeholder="example@domain.com"/>
 						<p id="emailErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
@@ -379,7 +383,9 @@
 							class="checkoutInput"
 						/>
 					</fieldset> -->
-				<button type="button" id="toPaymentBtn">To Payment</button>
+					<p id="toPaymentErrorMsg" class="paymentErrorMsg">Please make sure to fill all mandatory fields (containing a * symbol)</p>
+				<button class="continueShopping" type="button" id="toPaymentBtn">Proceed to payment</button>
+
 				<fieldset class="paymentSection toggleHide">
 					<legend>
 						<h4>Choose payment method</h4>
@@ -392,19 +398,19 @@
 						<label for="cardno">Card number:</label>
 						<div class="formInput">
 							<input type="number" id="cardno" class="checkoutInput" value="4111111111111111" />
-							<p id="cardNoErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+							<p id="cardNoErrorMsg" class="errorMsg toggleHide">Please provide a valid card number</p>
 						</div>
 
 						<label for="expirydate">Expiry date</label>
 						<div class="formInput">
 							<input type="text" id="expirydate" class="checkoutInput" value="05/25" />
-							<p id="expiryErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+							<p id="expiryErrorMsg" class="errorMsg toggleHide">Please provide a card use a valid card</p>
 						</div>
 
 						<label for="cvv">CVV Code</label>
 						<div class="formInput">
 							<input type="number" id="cvv" class="checkoutInput" />
-							<p id="cvvErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+							<p id="cvvErrorMsg" class="errorMsg toggleHide">Please provide a valid cvv/cvc number</p>
 						</div>
 					</div>
 
@@ -412,13 +418,13 @@
 							<label for="ssn">SSN:</label>
 							<div class="formInput">
 								<input type="text" id="ssn" class="checkoutInput" />
-								<p id="ssnErrorMsg" class="errorMsg toggleHide">Please provide a valid e-mail address</p>
+								<p id="ssnErrorMsg" class="errorMsg toggleHide">Please provide a valid social securty number</p>
 							</div>
 						</div>
-					
-				</fieldset>
 
-				<fieldset class="orderSubmit">
+
+				</fieldset>
+				<fieldset class="orderSubmit toggleHide">
 					<legend>
 						<h4>Complete order</h4>
 					</legend>
@@ -428,13 +434,16 @@
 							codes</label>
 					</div>
 					<div>
-						<input type="checkbox" id="privacynotice" name="privacynotice" value="privacynotice" />
+						<input type="checkbox" class="privacyNotice" name="privacynotice" value="privacynotice" />
 						<label for="privacynotice">I confirm that I have read and accepted
-							<a href="#">Elgantroses T&Cs</a></label>
+							<a href="#">Elgantroses T&Cs</a>*</label>
 					</div>
-					<button type="button" id="submitorder">Submit order</button>
-					<button id="resetBTN" type="reset">Reset</button>
+					<button disabled type="button" id="submitorder">Submit order</button>
 				</fieldset>
+
+				<button class="continueShopping toggleHide" type="button" id="backToDetails">Back to contact details</button>
+				<button class="continueShopping toggleHide" type="button" id="finalizeOrder">Finalize order</button>
+				<button class="continueShopping" id="resetBTN" type="reset">Reset order</button>
 			</form>
 		</div>
 	</section>
